# mq

./: .gitignore  AGENTS.md  CHANGELOG.md  PROJECT.md  README.md  RELEASE.md  main.py  pyproject.toml
.beads/: issues.jsonl
.github/: copilot-instructions.md
.github/workflows/: ci.yml
mq/: cli.py  errors.py  llm.py  store.py
src/mq/: cli.py  errors.py  llm.py  store.py
tests/: test_cli.py
