[project]
name = "mq"
version = "0.2.5"
description = "Command-line tool to query configured LLM chat models"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "llm-client @ git+https://github.com/xlr8harder/llm_client.git",
]

[project.scripts]
mq = "mq.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
